--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 
 <body>
   <script src="js/scripts.js"></script>
-  <iframe src="https://www.shadertoy.com/embed/XssfR2" style="height: 500px; width: 500px;"></iframe>
+  <iframe src="https://www.shadertoy.com/embed/XssfR2" style="height: 100%; width: 100%;"></iframe>
 </body>
 </html>
