--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 <body>
   <script src="js/scripts.js"></script>
-  <iframe src="https://www.shadertoy.com/embed/XssfR2" style="height: 100%; width: 100%;"></iframe>
+    <body style="margin:0px;padding:0px;overflow:hidden">
+    <iframe src="https://www.shadertoy.com/embed/XssfR2" frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe>
+</body>
 </body>
 </html>
