--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
 <body>
   <script src="js/scripts.js"></script>
     <body style="margin:0px;padding:0px;overflow:hidden">
-    <iframe src="mypage.html" style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
-    Your browser doesn't support iframes
-</iframe>
-</body>
+    <iframe src="https://www.shadertoy.com/embed/XssfR2" style="border: 0; position:absolute; top:0; left:0; right:0; bottom:0; width:100%; height:100%"></iframe>
 </body>
 </html>
