--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ $(function(){
 });
 </script>
     <body style="margin:0px;padding:0px;overflow:hidden">
-    <iframe src="https://www.shadertoy.com/embed/XssfR2&autoplay=1" style="border: 0; position:absolute; top:0; left:0; right:0; bottom:0=; width:100%; height:100%"></iframe>
+    <iframe src="https://www.shadertoy.com/embed/XssfR2?rel=0&autoplay=1" style="border: 0; position:absolute; top:0; left:0; right:0; bottom:0=; width:100%; height:100%"></iframe>
     <iframe width="50px" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/327515041&amp;color=ff5500&amp;auto_play=true&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false"></iframe>
 </body>
 </html>
