--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <title>From Sea From Land</title>
+  <meta name="author" content="YanlingHe">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -16,11 +13,10 @@
 </head>
 
 <body>
-  <script src="js/scripts.js"></script>
-    <script language="javascript" type="text/javascript" src="jquery-1.8.2.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script language="javascript" type="text/javascript">
     function printMousePos(event) {
-    consile.log( "clientX: " + event.clientX + " - clientY: " + event.clientY);
+    console.log( "clientX: " + event.clientX + " - clientY: " + event.clientY);
 }
 
 document.addEventListener("click", printMousePos);
