--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script language="javascript" type="text/javascript">
     function printMousePos(event) {
-    console.log( "clientX: " + event.clientX + " - clientY: " + event.clientY);
-}
-
-document.addEventListener("click", printMousePos);
+        console.log( "clientX: " + event.clientX + " - clientY: " + event.clientY);
+    }
+        console.log("start");
+        document.addEventListener("click", printMousePos);
 </script>
     <body style="margin:0px;padding:0px;overflow:hidden">
     <iframe src="https://www.shadertoy.com/embed/XssfR2?rel=0&autoplay=1" style="border: 0; position:absolute; top:0; left:0; right:0; bottom:0=; width:100%; height:100%"></iframe>
