--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript">
+        var iframepos = $("#shader").position();
+
+$('#shader').contents().find('body').on('click', function (e) { 
+    var x = e.clientX + iframepos.left; 
+    var y = e.clientY + iframepos.top;
+    console.log(x + " " + y);
+})
+        
     function printMousePos(event) {
         console.log( "clientX: " + event.clientX + " - clientY: " + event.clientY);
     }
@@ -22,7 +30,7 @@
         document.getElementById("shader").contentDocument.addEventListener("click", printMousePos);
 </script>
     <body style="margin:0px;padding:0px;overflow:hidden">
-    <iframe id="shader" src="https://www.shadertoy.com/embed/XssfR2?rel=0&autoplay=1" style="border: 0; position:absolute; top:0; left:0; right:0; bottom:0=; width:100%; height:50%"></iframe>
+    <iframe id="shader" src="https://www.shadertoy.com/embed/XssfR2?rel=0&autoplay=1" style="border: 0; position:absolute; top:0; left:0; right:0; bottom:0=; width:100%; height:50%" onload="iframeclick()"></iframe>
     <iframe width="50px" height="50" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/327515041&amp;color=ff5500&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false"></iframe>
     <button type="button" style="border: 0; position:absolute; left:30; bottom:0; width:20px; height:20px">BU</button>
 </body>
