--- a/index.html
+++ b/index.html
@@ -18,18 +18,10 @@
         
         var listener = addEventListener('blur', function() {
 	if(document.activeElement === document.getElementById('shader')) {
-		message.innerHTML = 'Clicked';
-         console.log("start");
+         console.log("Clicked");
 	}
     removeEventListener(listener);
 });
-        
-    function printMousePos(event) {
-        console.log("start");
-        console.log( "clientX: " + event.clientX + " - clientY: " + event.clientY);
-    }
-        console.log("start");
-        document.getElementById("shader").contentDocument.addEventListener("click", printMousePos);
 </script>
     <body style="margin:0px;padding:0px;overflow:hidden">
     <iframe id="shader" src="https://www.shadertoy.com/embed/XssfR2?rel=0&autoplay=1" style="border: 0; position:absolute; top:0; left:0; right:0; bottom:0=; width:100%; height:50%"></iframe>
