--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         });
    });
         $(function(){
+            console.log("widget1")
       var widget1 = SC.Widget("soundcloud_widget");
 
             var listener = addEventListener('blur', function() {
