--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="http://w.soundcloud.com/player/api.js"></script>
+    <script type="text/javascript" src="http://w.soundcloud.com/player/api.js"></script>
+
     <script type="text/javascript">
         
 //        var listener = addEventListener('blur', function() {
